Serveur de login v1 (squelette) : handshake ClientInfo1 -> BootData1 prouvé sur socket TCP
Réutilise INTÉGRALEMENT la pile réseau du jeu (aucune réimplémentation binaire) :
- server/java/com/perblue/grunt/translate/GruntServerFactory.java : fabrique du serveur
  NIO du jeu (GruntNIOTCPServer, package-private) ajoutée dans le même package (pas une
  modif du jeu) ; lève running + démarre le thread (le ctor ne l'active pas).
- server/java/dhserver/LoginServer.java : décode ClientInfo1, répond BootData1 via
  MessageFactory + codec DHXORConnectionWrapper du jeu.
- server/smoke/HandshakeRoundTrip.java : handshake bout-en-bout sur socket TCP réelle,
  sans libGDX. run.sh compile server/java + lance les 3 smoke tests (codec, message,
  handshake) : tous OK.
Docs PROTOCOL/SHIMS/README/MEMORY/JOURNAL mis à jour. .gitignore: server/smoke/out/.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X8YZTb9Pz94YMCoQpe5N13